# investment_metrics_dashboard

./: .gitignore  Dockerfile  README.md  anaconda_env_create.sh  environment.yml  package-lock.json  pixi.toml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: docker-image.yml  tests_pip_env.yml  tests_pixi_env.yml  tests_poetry_env.yml
env_deprecated/env01/: anaconda_env_create_OLD01.txt  environment_OLD01.yml
example_data/input_data/: filled_orders_input_example.csv
example_data/output_data/: filled_orders.json  filled_orders.parquet  filled_orders.sqlite  filled_orders_backup_1667793700_900936.csv  filled_orders_backup_1685483902_888282.csv  filled_orders_backup_1685492346_751012.csv  filled_orders_backup_1685492961_2774377.csv
example_data/src/: create_example_data.py
src/app/: app.py  sidebar.py
src/app/assets/: responsive-sidebar.css
src/data_pipeline/: transform_filled_orders.py
src/schemas/: app_schemas.py  data_pipeline_schemas.py
tests/app/: test_app.py  test_sidebar.py
tests/data_pipeline/: test_transform_filled_orders.py
