[tool.poetry]
name = "trade_metrics_dashboard"
version = "0.1.0"
description = "Trade metrics dashboard"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.2"
numpy = "^1.23.5"
plotly = "^5.11.0"
dash = "^2.7.0"
SQLAlchemy = "^1.4.45"
dash-bootstrap-components = "^1.2.1"
pyarrow = "^10.0.1"
pandera = "^0.13.4"
SQLAlchemy-Utils = "^0.38.3"
dash-daq = "^0.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
hypothesis = "^6.61.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
